2007-02-20  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Timers: failing timer actions don't prevent the global timer ticker
	from functioning properly.

2007-02-18  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Plugin: Provide a plugin.header file with boilerplate plugin
	title/author/copyright/license information. Authors of new plugins are
	encouraged to use it. Many existing plugins have been changed to
	follow the same spec.
	* NickServ plugin: delegate #identified() to other plugins after
	successfull identification. Also provide #identified?() method to test
	if the bot has successfully identified. Not perfect yet (gets reset
	after a rescan.)

2007-02-15  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Plugin: new unreplied() method to handle PRIVMSGs which have not
	been replied to.
	* Regexp: more regexp madness. BasicUserMessage and derivate classes
	now have a new method parse_channel_list() to parse list of channel
	names.

2007-02-12  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Remote Service Provider: from an idea by halorgium <rbot@spork.in>,
	initial steps towards a DRb-based remote service provider for rbot.
	When complete, it will give plugins the ability to listen to
	'messages' from remote clients connected to the bot, allowing for such
	things as svn notification without RSS polling, remote control of
	the bot, or even (why not?) botnets.
	* Remote Service Provider: BotModules can now include the
	RemoteBotModule interface that provides them with the remote_map()
	method that works just like the map() method, but for remote commands
	* Remote Service Provider: Remote clients can now login remotely
	before executing commands. This in fact integrates the remote access
	auth security with the User/BotUser used on IRC itself.

2007-02-08  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Languages: Japanese support with language files, salutations, larts
	and praises, thanks to hagabaka (Yaohan Chen <yaohan.chen@gmail.com>)
